<resources>
    <string name="app_name">LaboratorioPersonal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Laboratorio Personal</string>
    <string name="nav_header_subtitle">Grupo B01- Subgrupo 15</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="nombre">Rony Sierra</string>
    <string name="edad">32 años</string>
    <string name="sexo">Masculino</string>
    <string name="peso">85 Kg</string>
    <string name="talla">174 cms</string>
</resources>